--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<script src="api.js"></script>
 		<script>
 			function callMintCount() {
-				alert("ok");
+				document.getElementById("mintCount").value = "Johnny Bravo";
+				document.getElementById("mintCount").value = "Johnny Bravo";
 			}
 		</script>
 		<link rel="stylesheet" href="style.css" />
@@ -13,9 +14,9 @@
 	<body onload="callMintCount();">
 		<div class="title">OnlyOne</div>
 		<div class="mint-stats-container">
-			<div><span>total minted: </span><span id="mintCount"></span></div>
+			<div><span>total minted: </span><input id="mintCount"></input></div>
 			<div>
-				<span>total remaining: </span><span id="mintCount">test</span>
+				<span>total remaining: </span><input id="remainingCount"></input>
 			</div>
 		</div>
 		<main class="canvas"></main>
