--- a/index.html
+++ b/index.html
@@ -19,11 +19,30 @@
 		<div class="mint-stats-container window white">
 			<div><p id="mintCount"></p></div>
 			<div><p id="remainingCount"></p></div>
-			<div class="MintForm">
+			<div class="MintForm" id="MintForm">
 				<input id="InputAmount" type="number" value=10></input>
 				<button onclick="mint()">Mint</button>
 			</div>
-			<button class="colorChangeButton">Change Your Pixel's Color</button>
+			<div>
+				<select name="tokenID" id="selectedTokenID">
+					<option value="volvo">1</option>
+					<option value="saab">2</option>
+					<option value="mercedes">3</option>
+					<option value="audi">4</option>
+				  </select> 
+				  <select name="color" id="selectedColor">
+					<option value="volvo">Black</option>
+					<option value="saab">White</option>
+					<option value="mercedes">Red</option>
+					<option value="audi">Green</option>
+					<option value="audi">Blue</option>
+					<option value="audi">Yellow</option>
+					<option value="audi">Purple</option>
+					<option value="audi">Cyan</option>
+
+				  </select> 
+				  <button class="colorChangeButton">Change Your Pixel's Color</button>
+			</div>
 		</div>
 		<main id="canvas" class="canvas"></main>
 	</body>
