--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				  <button class="colorChangeButton">Change Your Pixel's Color</button>
 			</div>
 		</div>
-		<main id="canvas" class="canvas"></main>
+		<main id="canvas" class="canvas">Loading Mosaic...</main>
 	</body>
 	<script src="sketch.js"></script>
 </html>
