add graphql request

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
 		<script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
         type="application/javascript"></script>
+		<script src="graph.js"></script>
 		<script src="api.js"></script>
 		<script src="mint.js"></script>
 		<script>
