--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>OnePixel</title>
 	</head>
-	<body onload="connect()">
+	<body onload="connect(); getColor()">
 		<div class="title window blue">Only One Pixel</div>
 		<div class="mint-stats-container window white">
 			<div><p id="mintCount"></p></div>
