--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<div class="mint-stats-container window white">
 			<div><p id="mintCount"></p></div>
 			<div><p id="remainingCount"></p></div>
+			<div><p>0.05 ETH for 1 Pixel</p></div>
 			<div class="MintForm" id="MintForm">
 				<input id="InputAmount" type="number" value=10></input>
 				<button onclick="mint()">Mint</button>
