--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			}
 		</script>
 		<link rel="stylesheet" href="style.css" />
-		<title>OnePixel</title>
+		<title>OnePixel - Mint @ August 7th 3:00pm EST - Max 10 Pixels / tx</title>
 	</head>
 	<body onload="connect();fillDropdown();getColor()">
 		<div class="title window blue">Only One Pixel</div>
