--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			}
 		</script>
 		<link rel="stylesheet" href="style.css" />
-		<title>OnePixel - Mint @ August 7th 3:00pm EST - Max 10 Pixels / tx</title>
+		<title>OnePixel</title>
 	</head>
 	<body onload="connect();fillDropdown();getColor()">
-		<div class="title window blue">Only One Pixel</div>
+		<div class="title window blue">Only One Pixel - Mint @ August 7th 3:00pm EST - Max 10 Pixels / tx</div>
 		<div class="mint-stats-container window white">
 			<div><p id="mintCount"></p></div>
 			<div><p id="remainingCount"></p></div>
