add spacing to title

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<title>OnePixel</title>
 	</head>
 	<body onload="connect();fillDropdown();getColor()">
-		<div class="title window blue">Only One Pixel - Mint @ August 7th 3:00pm EST - Max 10 Pixels / tx</div>
+		<div class="title window blue">Only One Pixel<br>Mint @ August 7th 3:00pm EST<br>Max 10 Pixels / tx</div>
 		<div class="mint-stats-container window white">
 			<div><p id="mintCount"></p></div>
 			<div><p id="remainingCount"></p></div>
