--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>OnePixel</title>
 	</head>
-	<body onload="connect();fillDropdown();getColor()">
-		<div class="title window blue">Only One Pixel<br>Sold Out!<br>Full Grid Below Coming Soon</div>
+	<body onload="connect();fillDropdown();getColors()">
+		<div class="title window blue">Only One Pixel</div>
 		<div class="mint-stats-container window white">
 			<div>
 				<select name="tokenIdInput" id="tokenIdInput"></select> 
