--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="mint.js"></script>
 		<script src="tokenIds.js"></script>
 		<script src="changeColor.js"></script>
+		<link rel="stylesheet" href="https://unpkg.com/xp.css" />
 		<link rel="stylesheet" href="style.css" />
 		<title>OnePixel</title>
 	</head>
