--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src="changeColor.js"></script>
 		<link rel="stylesheet" href="https://unpkg.com/xp.css" />
 		<link rel="stylesheet" href="style.css" />
+		<link rel="shortcut icon" type="image/png" href="collection_picture.png"/>
 		<title>OnePixel</title>
 	</head>
 	<body onload="connect();fillDropdown();getColors()">
@@ -19,14 +20,14 @@
 			<div>
 				<select name="tokenIdInput" id="tokenIdInput"></select> 
 				  <select name="color" id="selectedColor">
-					<option value="0">Black</option>
-					<option value="1">White</option>
-					<option value="2">Blue</option>
-					<option value="3">Red</option>
-					<option value="4">Green</option>
-					<option value="5">Yellow</option>
-					<option value="6">Purple</option>
-					<option value="7">Cyan</option>
+					<option value="0"> Black</option>
+					<option value="1"> White</option>
+					<option value="2"> Blue</option>
+					<option value="3"> Red</option>
+					<option value="4"> Green</option>
+					<option value="5"> Yellow</option>
+					<option value="6"> Purple</option>
+					<option value="7"> Cyan</option>
 				  </select> 
 				  <button onclick="changeColor()" class="colorChangeButton">Change Your Pixel's Color</button>
 			</div>
