add black counter

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	</head>
 	<body onload="connect();fillDropdown();getColors()">
 		<div class="title window blue">Only One Pixel</div>
+		<div class="matches" id="matches"></div>
 		<main id="canvas" class="canvas"></main>
 		<div class="mint-stats-container window white">
 			<div>
