--- a/index.html
+++ b/index.html
@@ -1,38 +1,64 @@
-<html>
-	<head>
-		<script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
-		<script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
-        type="application/javascript"></script>
-		<script src="graph.js"></script>
-		<script src="api.js"></script>
-		<script src="mint.js"></script>
-		<script src="tokenIds.js"></script>
-		<script src="changeColor.js"></script>
-		<link rel="stylesheet" href="https://unpkg.com/xp.css" />
-		<link rel="stylesheet" href="style.css" />
-		<link rel="shortcut icon" type="image/png" href="collection_picture.png"/>
-		<title>OnePixel</title>
-	</head>
-	<body onload="connect();fillDropdown();getColors()">
-		<div class="title window blue">Only One Pixel</div>
-		<div class="matches" id="matches"></div>
-		<main id="canvas" class="canvas"></main>
-		<div class="mint-stats-container window white">
-			<div>
-				<select name="tokenIdInput" id="tokenIdInput"></select> 
-				  <select name="color" id="selectedColor">
-					<option value="0"> Black</option>
-					<option value="1"> White</option>
-					<option value="2"> Blue</option>
-					<option value="3"> Red</option>
-					<option value="4"> Green</option>
-					<option value="5"> Yellow</option>
-					<option value="6"> Purple</option>
-					<option value="7"> Cyan</option>
-				  </select> 
-				  <button onclick="changeColor()" class="colorChangeButton">Change Your Pixel's Color</button>
-			</div>
-		</div>
-	</body>
-	<script src="sketch.js"></script>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="./assets/images/collection_picture.png"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="./style.css" rel="stylesheet">
+    <title>OnePixel</title>
+  </head>
+  <body onload=main();>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">OnePixel</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Community Links
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="https://discord.gg/9XwVsN6jZ9" target="_blank">Discord</a></li>
+                  <li><a class="dropdown-item" href="https://twitter.com/OnlyOnePixel" target="_blank">Twitter</a></li>
+                  <li><a class="dropdown-item" href="https://snapshot.org/#/onepixeldao.eth" target="_blank">Governance</a></li>
+                  <li><a class="dropdown-item" href="https://opensea.io/collection/onlyonepixel" target="_blank">OpenSea</a></li>
+                </ul>
+              </li>
+            </ul>
+            <span id="account-name" class="navbar-text">
+            </span>
+            </div>
+        </div>
+    </nav>
+    <div class="matches" id="matches"></div>
+    <main id="canvas" class="canvas"></main>
+    <div class="col-md-12 text-center">
+        <select class="form-select" name="tokenIdInput" id="tokenIdInput"></select> 
+        <select class="form-select" id="selectedColor">
+            <option selected value="0">Black</option>
+            <option value="1">White</option>
+            <option value="2">Blue</option>
+            <option value="3">Red</option>
+            <option value="4">Green</option>
+            <option value="5">Yellow</option>
+            <option value="6">Purple</option>
+            <option value="7">Cyan</option>
+        </select>    
+        <button type="button" class="btn btn-primary change-color-btn" onclick=changeColor()>Change Color</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+    <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"></script>
+    <script src="./assets/js/graph.js"></script>
+    <script src="./assets/js/connect.js"></script>
+    <script src="./assets/js/sketch.js"></script>
+    <script src="./assets/js/tokenDropdown.js"></script>
+    <script src="./assets/js/changeColor.js"></script>
+    <script src="./assets/js/web3.js"></script>
+    <script src="./assets/js/main.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
 </html>
