--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./style.css" rel="stylesheet">
     <title>OnePixel</title>
   </head>
-  <body onload=getColor();main();>
+  <body onload=main();>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">OnePixel</a>
