add connect button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
               </li>
             </ul>
             <span id="account-name" class="navbar-text">
+              <a href="javascript:main();">Connect MetaMask</a>
             </span>
             </div>
         </div>
