show/hide color changer on connect

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
     <div class="matches" id="matches"></div>
     <main id="canvas" class="canvas"></main>
-    <div class="col-md-12 text-center">
+    <div class="col-md-12 text-center" id="colorChanger" style="display:none;">
         <select class="form-select" name="tokenIdInput" id="tokenIdInput"></select> 
         <select class="form-select" id="selectedColor">
             <option selected value="0">Black</option>
