--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                   <li><a class="dropdown-item" href="https://twitter.com/OnlyOnePixel" target="_blank">Twitter</a></li>
                   <li><a class="dropdown-item" href="https://snapshot.org/#/onepixeldao.eth" target="_blank">Governance</a></li>
                   <li><a class="dropdown-item" href="https://opensea.io/collection/onlyonepixel" target="_blank">OpenSea</a></li>
+                  <li><a class="dropdown-item" href="http://etherscan.io/address/0x93f5813b47f02157cf53b3a294746c95f6098948" target="_blank">Etherscan</a></li>
                 </ul>
               </li>
             </ul>
