--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                   <li><a class="dropdown-item" href="https://snapshot.org/#/onepixeldao.eth" target="_blank">Governance</a></li>
                   <li><a class="dropdown-item" href="https://opensea.io/collection/onlyonepixel" target="_blank">OpenSea</a></li>
                   <li><a class="dropdown-item" href="https://etherscan.io/address/0x93f5813b47f02157cf53b3a294746c95f6098948" target="_blank">Etherscan</a></li>
+                  <li><a class="dropdown-item" href="https://fractional.art/vaults/0xDFcbD475b8E28d17B66A0FAcabD9EAB7683184b5" target="_blank">Genesis Vault</a></li>
                 </ul>
               </li>
             </ul>
