auto chose target color

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="matches" id="matches"></div>
     <main id="canvas" class="canvas"></main>
     <div class="col-md-12 text-center" id="colorChanger" style="display:none;">
-        <select class="form-select" name="tokenIdInput" id="tokenIdInput"></select> 
+        <select class="form-select" name="tokenIdInput" id="tokenIdInput" onchange=fillTarget()></select> 
         <select class="form-select" id="selectedColor">
             <option selected value="0">Black</option>
             <option value="1">White</option>
@@ -60,6 +60,7 @@
     <script src="./assets/js/sketch.js"></script>
     <script src="./assets/js/tokenDropdown.js"></script>
     <script src="./assets/js/changeColor.js"></script>
+    <script src="./assets/js/fillTarget.js"></script>
     <script src="./assets/js/web3.js"></script>
     <script src="./assets/js/main.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
